--- a/index.css
+++ b/index.css
@@ -247,3 +247,38 @@ hr {
     text-align: center;
     margin-bottom: 113px;
 }
+
+.contact{
+    display: flex;
+    gap: 117px;
+background: #FFF8F3;
+padding: 100px 100px;
+
+}
+.contact .section-title{
+    text-align: left;
+}
+
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
+}
+
+.section-description1{
+    font-weight: 400;
+    font-size: 18px;
+    color: #757575;
+    text-align: left;
+    /* width: 909px; */
+    margin-bottom: 50px;
+}
+
+.contact a{
+    text-decoration: none;
+    margin-right: 24px;
+}
